--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css"
+    />
   </head>
   <body class="container-fluid h-100 p-0">
     <header
@@ -138,15 +142,15 @@
       <div class="container-lg p-0">
         <h2 class="text-light fw-bold">The top of the week</h2>
         <div class="row justify-content-between mt-4 m-0">
-          <div class="col-5 border-0 p-0 rounded-3">
+          <div class="col-3 border-0 p-0 rounded-3">
             <img
               style="object-fit: cover"
-              class="img-fluid w-100 h-50 rounded-3"
+              class="img-fluid w-100 rounded-3"
               src="asset/bumi.png"
               alt=""
             />
             <div class="mt-3">
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex justify-content-between align-items-start">
                 <h4 class="text-light fw-semibold">Novel Bumi</h4>
                 <h5 class="text-light fw-semibold">Rp50.000</h5>
               </div>
@@ -177,30 +181,85 @@
                   <p class="ms-1 text-light m-0 p-0">(79)</p>
                 </div>
                 <i
-                  class="bi bi-heart-fill rounded-5 border border-2 border-light p-2 text-light d-flex justify-content-center align-items-center"
+                  style="border: 2px solid white; color: white; cursor: pointer"
+                  class="like bi bi-heart-fill rounded-5 p-2 d-flex justify-content-center align-items-center"
                 ></i>
               </div>
             </div>
             <a
               href=""
-              class="btn btn-light textPrimaryColor rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
+              style="color: #0e8ed7"
+              class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
               >Buy now</a
             >
           </div>
-          <div class="col-5 border-0 p-0 rounded-3">
+          <div class="col-3 border-0 p-0 rounded-3">
             <img
               style="object-fit: cover"
-              class="img-fluid w-100 h-50 rounded-3"
+              class="img-fluid w-100 rounded-3"
+              src="asset/why.jpg"
+              alt=""
+            />
+            <div class="mt-3">
+              <div class="d-flex justify-content-between align-items-start">
+                <h4 class="text-light fw-semibold">Why?</h4>
+                <h5 class="text-light fw-semibold">Rp75.000</h5>
+              </div>
+              <h5 class="text-light fw-medium">By YeaRimDang</h5>
+              <h5 class="text-light fw-medium">Stok : 3</h5>
+              <div class="d-flex justify-content-between align-items-end">
+                <div class="d-flex gap-1">
+                  <i
+                    style="color: rgb(255, 229, 32)"
+                    class="bi bi-star-fill m-0 p-0"
+                  ></i>
+                  <i
+                    style="color: rgb(255, 229, 32)"
+                    class="bi bi-star-fill m-0 p-0"
+                  ></i>
+                  <i
+                    style="color: rgb(255, 229, 32)"
+                    class="bi bi-star-fill m-0 p-0"
+                  ></i>
+                  <i
+                    style="color: rgb(255, 229, 32)"
+                    class="bi bi-star-fill m-0 p-0"
+                  ></i>
+                  <i
+                    style="color: rgb(255, 229, 32)"
+                    class="bi bi-star-fill m-0 p-0"
+                  ></i>
+                  <p class="ms-1 text-light m-0 p-0">(20)</p>
+                </div>
+                <i
+                  style="border: 2px solid white; color: white; cursor: pointer"
+                  class="like bi bi-heart-fill rounded-5 p-2 d-flex justify-content-center align-items-center"
+                ></i>
+              </div>
+            </div>
+            <a
+              href=""
+              style="color: #0e8ed7"
+              class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
+              >Buy now</a
+            >
+          </div>
+          <div class="col-3 border-0 p-0 rounded-3">
+            <img
+              style="object-fit: cover"
+              class="img-fluid w-100 rounded-3"
               src="asset/utbk.jpg"
               alt=""
             />
             <div class="mt-3">
-              <div class="d-flex justify-content-between align-items-center">
-                <h4 class="text-light fw-semibold">Mega Bank UTBK SBMPTN 2023</h4>
+              <div class="d-flex justify-content-between align-items-start">
+                <h4 class="text-light fw-semibold">
+                  Mega Bank UTBK SBMPTN 2023
+                </h4>
                 <h5 class="text-light fw-semibold">Rp250.000</h5>
               </div>
               <h5 class="text-light fw-medium">By Media</h5>
-              <h5 class="text-light fw-medium">Stok : 5</h5>
+              <h5 class="text-light fw-medium">Stok : 0</h5>
               <div class="d-flex justify-content-between align-items-end">
                 <div class="d-flex gap-1">
                   <i
@@ -223,22 +282,219 @@
                     style="color: rgb(255, 229, 32)"
                     class="bi bi-star-half m-0 p-0"
                   ></i>
-                  <p class="ms-1 text-light m-0 p-0">(79)</p>
+                  <p class="ms-1 text-light m-0 p-0">(248)</p>
                 </div>
                 <i
-                  class="bi bi-heart-fill rounded-5 border border-2 border-light p-2 text-light d-flex justify-content-center align-items-center"
+                  style="border: 2px solid white; color: white; cursor: pointer"
+                  class="like bi bi-heart-fill rounded-5 p-2 d-flex justify-content-center align-items-center"
                 ></i>
               </div>
             </div>
             <a
-              href=""
-              class="btn btn-light textPrimaryColor rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
-              >Buy now</a
+              onclick="showSoldOutPopUp()"
+              class="btn btn-light rounded-5 text-danger w-100 py-2 fw-bold fs-5 mt-3"
+              >Sold out</a
             >
           </div>
         </div>
       </div>
     </section>
+    <section class="container-fluid h-100 py-5 m-0">
+      <div class="container-lg p-0">
+        <h2 class="textPrimaryColor fw-bold">Choose By Brand</h2>
+        <div class="row gap-5 m-0 mt-5">
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/erlangga.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Erlangga</h5>
+              <p class="textSecondaryColor fw-normal m-0">Jakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/bukunesia.png"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Bukunesia</h5>
+              <p class="textSecondaryColor fw-normal m-0">Yogyakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/plotPoint.png"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Plot Point</h5>
+              <p class="textSecondaryColor fw-normal m-0">Jakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/inari.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Inari</h5>
+              <p class="textSecondaryColor fw-normal m-0">Tangerang</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/twigora.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Twigora</h5>
+              <p class="textSecondaryColor fw-normal m-0">Jakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/haru.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Haru</h5>
+              <p class="textSecondaryColor fw-normal m-0">Ponorogo</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/metagraf.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Metagraf</h5>
+              <p class="textSecondaryColor fw-normal m-0">Magelang</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/grasindo.png"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Grasindo</h5>
+              <p class="textSecondaryColor fw-normal m-0">Jakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/divaPress.jpg"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Diva Press</h5>
+              <p class="textSecondaryColor fw-normal m-0">Yogyakarta</p>
+            </div>
+          </div>
+          <div
+            class="col-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
+          >
+            <img
+              style="width: 80px"
+              class="img-fluid rounded-circle"
+              src="asset/andi.png"
+              alt=""
+            />
+            <div class="ms-2">
+              <h5 class="fw-semibold textSecondaryColor m-0">Andi</h5>
+              <p class="textSecondaryColor fw-normal m-0">Yogyakarta</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid m-0 py-5">
+      <div class="container-lg p-0">
+        <h2 class="textPrimaryColor fw-bold">Service that we provide</h2>
+        <div class="row m-0 justify-content-between mt-5">
+          <div class="col-3 bg-light rounded-4 p-0 rounded-3 shadow-sm h-100">
+            <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
+              Online Payment Process
+            </h3>
+            <p class="mt-5 fw-normal px-4">
+              Does not have cash? choose online payment
+            </p>
+            <img
+              class="img-fluid rounded-bottom-4"
+              src="asset/onlinePayment.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-3 bg-light rounded-3 p-0 rounded-3 shadow-sm h-100">
+            <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
+              You Can Get The Cash Back Easily
+            </h3>
+            <p class="mt-5 fw-normal px-4">
+              Your order broken or feeling scamed? you can clime the cash back
+            </p>
+            <img
+              class="img-fluid rounded-bottom-4"
+              src="asset/cashBack.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-3 bg-light rounded-3 p-0 rounded-3 shadow-sm">
+            <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
+              Home Delivery Option
+            </h3>
+            <p class="mt-5 fw-normal px-4">
+              Lazy go to the shop? choose home delivery
+            </p>
+            <img
+              class="img-fluid rounded-bottom-4"
+              src="asset/homeDelivery.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/popUp.js"></script>
+    <script src="js/like.js"></script>
   </body>
 </html>
