adding collaboration with section

--- a/index.html
+++ b/index.html
@@ -299,6 +299,25 @@
         </div>
       </div>
     </section>
+    <section class="container-fluid py-5 m-0">
+      <h2 class="container-lg textPrimaryColor fw-bold">In collaboration with</h2>
+      <div class="collabWrapper container-fluid p-0">
+        <div class="slide d-inline-block">
+          <img style="width: 150px; margin: 0 150px;" src="asset/erlangga.jpg" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/gramedia.png" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/bobo.png" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/forbes.svg" alt="">
+          <img style="width: 220px; margin: 0 150px;" src="asset/kompas.svg" alt="">
+        </div>
+        <div class="slide d-inline-block">
+          <img style="width: 150px; margin: 0 150px;" src="asset/erlangga.jpg" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/gramedia.png" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/bobo.png" alt="">
+          <img style="width: 200px; margin: 0 150px;" src="asset/forbes.svg" alt="">
+          <img style="width: 220px; margin: 0 150px;" src="asset/kompas.svg" alt="">
+        </div>
+      </div>
+    </section>
     <section class="container-fluid h-100 py-5 m-0">
       <div class="container-lg p-0">
         <h2 class="textPrimaryColor fw-bold">Choose By Brand</h2>
@@ -468,7 +487,7 @@
               You Can Get The Cash Back Easily
             </h3>
             <p class="mt-5 fw-normal px-4">
-              Your order broken or feeling scamed? you can clime the cash back
+              Your order is damaged and different from the one in the photo?
             </p>
             <img
               class="img-fluid rounded-bottom-4"
@@ -481,7 +500,7 @@
               Home Delivery Option
             </h3>
             <p class="mt-5 fw-normal px-4">
-              Lazy go to the shop? choose home delivery
+              lazy to go to the shop? select the delivery service option
             </p>
             <img
               class="img-fluid rounded-bottom-4"
